# RGB565-Matrix-to-BMP

./: BMP_Structure.md  CMakeLists.txt  Jenkinsfile  README.md  vcpkg.json
include/: bitmap.h  matrix.h
src/: bitmap.c  main.c  matrix.c
test/: CMakeLists.txt  test_main.cpp  test_matrix.hpp
test/matrix/: CMakeLists.txt  matrix_allocation_test.cpp  matrix_fill_pixel_test.cpp  matrix_test.cpp  matrix_vertical_draw_test.cpp  matrix_write_rgb565_pixel_rgb_test.cpp
